JujutsuShenanigans/build_error.log
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/home/codespace/.gradle/wrapper/dists/gradle-8.14.1-bin/baw1sv0jfoi8rxs14qo3h49cs/gradle-8.14.1/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled


> Configure project :
Fabric Loom: 1.9.2

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava FAILED
/workspaces/Minecraft/JujutsuShenanigans/src/client/java/com/jujutsushenanigans/client/JujutsuShenanigansClient.java:80: error: cannot find symbol
                        shader.getUniformOrDefault("Time").set(time);
                              ^
  symbol:   method getUniformOrDefault(String)
  location: variable shader of type ShaderProgram
/workspaces/Minecraft/JujutsuShenanigans/src/client/java/com/jujutsushenanigans/client/JujutsuShenanigansClient.java:81: error: cannot find symbol
                        shader.getUniformOrDefault("Intensity").set(intensity);
                              ^
  symbol:   method getUniformOrDefault(String)
  location: variable shader of type ShaderProgram
2 errors

[Incubating] Problems report is available at: file:///workspaces/Minecraft/JujutsuShenanigans/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  /workspaces/Minecraft/JujutsuShenanigans/src/client/java/com/jujutsushenanigans/client/JujutsuShenanigansClient.java:80: error: cannot find symbol
                          shader.getUniformOrDefault("Time").set(time);
                                ^
    symbol:   method getUniformOrDefault(String)
    location: variable shader of type ShaderProgram
  /workspaces/Minecraft/JujutsuShenanigans/src/client/java/com/jujutsushenanigans/client/JujutsuShenanigansClient.java:81: error: cannot find symbol
                          shader.getUniformOrDefault("Intensity").set(intensity);
                                ^
    symbol:   method getUniformOrDefault(String)
    location: variable shader of type ShaderProgram
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
3 actionable tasks: 1 executed, 2 up-to-date
